@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -31,7 +31,7 @@ import org.openhab.binding.homematic.internal.converter.type.StringTypeConverter
  * @author Michael Reitler - QuantityType support
  */
 public class ConverterFactory {
-    private static Map<String, TypeConverter<?>> converterCache = new HashMap<String, TypeConverter<?>>();
+    private static Map<String, TypeConverter<?>> converterCache = new HashMap<>();
 
     /**
      * Returns the converter for a itemType.
@@ -67,7 +67,7 @@ public class ConverterFactory {
             converter = converterCache.get(converterClass.getName());
             if (converter == null) {
                 try {
-                    converter = converterClass.newInstance();
+                    converter = converterClass.getConstructor().newInstance();
                     converterCache.put(converterClass.getName(), converter);
                 } catch (Exception e) {
                     // ignore
@@ -79,5 +79,4 @@ public class ConverterFactory {
         }
         return converter;
     }
-
 }
